layout issue fixed

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -41,3 +41,12 @@
 .width-100 {
 	width: 100%;
 }
+
+@media screen and (max-width: 576px) {
+	.ant-list-item-action {
+		margin-left: 0px;
+		margin-top: 10px;
+		width: 100%;
+		text-align: center;
+	}
+}
